# beacon-protos

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: license_headers_check.yml
protos/: LICENSE
src/: beacon_v1.rs  error.rs  lib.rs
