[package]
name = "beacon-protos"
version = "0.1.1"
edition = "2021"

[lib]
name = "beacon_protos"
path = "src/lib.rs"

[dependencies]
bls = { git = "https://github.com/semiotic-ai/lighthouse.git", branch = "stable" }
firehose-rs = "0.1.0"
primitive-types = "0.12.2"
prost = "0.13.1"
prost-wkt = "0.6.0"
prost-wkt-types = "0.6.0"
serde = { version = "1.0.208", features = ["derive"] }
ssz_types = "0.6"
thiserror = "2.0.0"
tonic = "0.12.0"
types = { git = "https://github.com/semiotic-ai/lighthouse.git", branch = "stable" }

[build-dependencies]
prost-build = "0.13.1"
tonic-build = "0.12.0"
